# Enigma_legacy

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Enigma.sln  GenerateProject.bat  README.md  Readme.md  premake5.lua  updateSubmodules.bat
ENGMEdit/: imgui.ini
ENGMEdit/assets/shaders/: FlatColor.glsl  Texture.glsl
ENGMEdit/src/: EditorApplication.cpp  EditorLayer.cpp  EditorLayer.h
Enigma/: Enigma.vcxproj  Enigma.vcxproj.filters
Enigma/src/: Enigma.h  engmpch.cpp  engmpch.h
Enigma/src/Enigma/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  Layer.cpp  Layer.h  Layerstack.cpp  Layerstack.h  Log.cpp  Log.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Window.h
Enigma/src/Enigma/Core/: Application.cpp  Application.h  EntryPoint.h  Input.h  Keycodes.h  Layer.cpp  Layer.h  Layerstack.cpp  Layerstack.h  Log.cpp  Log.h  Mousecodes.h  Timestep.h  Window.h
Enigma/src/Enigma/Debug/: Profiler.h
Enigma/src/Enigma/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Enigma/src/Platform/libpng/: png.h
Sandbox/: EnigmaProfile-Runtime.json  EnigmaProfile-Shutdown.json  EnigmaProfile-Startup.json  Sandbox.vcxproj  imgui.ini
Sandbox/assets/shaders/: FlatColor.glsl  Texture.glsl
Sandbox/src/: Sandbox.cpp  Sandbox2D.cpp  Sandbox2D.h  SandboxApplication.cpp
src/: Enigma.h
src/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Window.h
src/Event/: ApplicationEvents.h  Event.h
src/debug/: Log.cpp  Log.h  Logger.cpp  Logger.h  Profiler.cpp  Profiler.h
src/platform/GLFW/: GLFWWindow.cpp  GLFWWindow.h
(+47 files in other folders)
